[project]
name = "lpy-autocomplete"
version = "0.1.0"
description = "Autocompletion and introspection tools for lispython."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "jetack" }
]
keywords = ["python", "lispy", "lispython", "completion", "introspection", "emacs"]
dependencies = []

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
Repository = "https://github.com/jetack/lpy-autocomplete"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lpy_autocomplete"]
